# nuage

./: .gitignore  Justfile  LICENSE  README.md  SCRATCH.md  TODO.md  flake.nix  go.mod  go.sum
docs/playbooks/: ssl-certs.md
guidelines/: README.md  tags.md
orchestration/: README.md
orchestration/deploy-go-carbon-neutral/: Makefile  README.md  ansible.cfg  aws_ec2.yml  playbook.yml  pyproject.toml
packer/base/: Makefile  README.md  base_test.go  packer.json  playbook.yml
packer/bastion/: Makefile  README.md  packer.json  playbook.yml
packer/blog/: Makefile  README.md  blog_test.go  packer.json  playbook.yml
packer/go-carbon-neutral/: Makefile  inputs.yaml  packer.json  playbook.yml
packer/k8s/: Makefile  README.md  packer.json  playbook.yml
packer/k8s/integration/: Vagrantfile
packer/share/boxes/: README.md
packer/share/roles/: README.md  requirements.yml
packer/share/scripts/: install-ansible.sh
packer/share/tests/: README.md
packer/vidzou/: Makefile  packer.json  playbook.yml
terraform/: README.md
terraform-bootstrap/: README.md
terraform-bootstrap/environments/development/: main.tf  terraform.tfstate.gpg
terraform-bootstrap/environments/global/: main.tf  terraform.tfstate.gpg
terraform-bootstrap/environments/production/: main.tf  terraform.tfstate.gpg
terraform-bootstrap/environments/staging/: main.tf  provider.tf  terraform.tfstate.gpg
terraform-bootstrap/modules/bootstrap/: README.md  main.tf  variables.tf
terraform/environments/development/: .terraform.lock.hcl  main.tf  provider.tf  versions.tf
(+198 files in other folders)
