[tool.poetry]
name = "deploy-go-carbon-neutral"
version = "0.1.0"
description = ""
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9"
boto3 = "^1.20.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
